--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -36,16 +36,20 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with unittest
       run: |
-        python ./test/test.py
+        cd test
+        python test.py
 
     - name: HW2 - Testing Sym
       run: |
-        python ./test/testSym.py
+        cd test
+        python testSym.py
 
     - name: Hw2 - Testing Num
       run: |
-        python ./test/testNum.py
+        cd test
+        python testNum.py
       
     - name: Hw2 - Testing BigNum
       run: |
-        python ./test/testBigNum.py
+        cd test
+        python testBigNum.py
